actualizando page_contacto

--- a/Contacto.html
+++ b/Contacto.html
@@ -44,61 +44,39 @@
     </div>
   </header>
 
-<section class="contacto py-4">
-
-<div class="container">
-      <div class="row">
-
-        <div class="col-md-6">
+  <section class="contacto bg_page_contacto py-4">
+    <div class="container pt-5">
+      <h6>Formulario de Contacto</h6>
+      <!-- <div class="row"> -->
+        <!-- <div class="col-md-12"> -->
           <form class="container">
             <div class="form-group">
-              <label for="exampleInputEmail1">Direccion de correo</label>
+              <label class="text_label" for="exampleInputEmail1">Direccion de correo</label>
               <input type="email" class="form-control" placeholder="Ingrese su correo" id="exampleInputEmail1" aria-describedby="emailHelp">
-              </div>
+            </div>
             <div class="form-group">
-              <label for="exampleInput">Su nombre</label>
+              <label class="text_label" for="exampleInput">Su nombre</label>
               <input type="input" class="form-control" placeholder="Ingrese su nombre">
             </div>
             <div class="form-group">
-              <label for="exampleInput">Asunto</label>
+              <label class="text_label" for="exampleInput">Asunto</label>
               <input type="input" class="form-control" placeholder="Ingrese el asunto">
             </div>
             <div class="input-group">
 
-          <textarea class="form-control" aria-label="With textarea" placeholder="Ingrese su mensaje"></textarea>
+              <textarea class="form-control" aria-label="With textarea" placeholder="Ingrese su mensaje"></textarea>
             </div>
-              <div class="button py-4 text-center">
-            <button type="submit" class="btn btn-primary button_formulario">Enviar mensaje</button>
+            <div class="button py-4 text-center">
+              <button type="submit" class="button_formulario ">Enviar mensaje</button>
             </div>
           </form>
-        </div>
-            <div class="col-md-6">
-              <div class="contacto__svg py-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="20rem"  x="0" y="0" viewbox="0 0 18.4 18.4" class="undefined">
-            <style>
-              .a{
-                fill:#030104;
-              }
-            </style>
-              <g class="undefined">
-                <g class="undefined">
-                  <path d="M8.5 14.4c-0.2-0.6-0.3-0.7-0.6-0.8 -0.2-0.2-0.4-0.4-0.5-0.4 -0.2 0-0.6-0.2-0.6-0.4 0-0.2-0.2-1.2 0-1.3 0.2-0.1 0.8-0.8 0.7-1.2 -0.1-0.4 0-1.7 0-2.4 0-0.7-0.3-2.2-0.3-2.4C7.2 5.3 6.4 5.1 6.4 5.1s-1.2-0.2-2.2-0.3C3.4 4.7 1.9 6.8 1.9 7 1.8 7.2 2.3 7.6 2.3 7.6S1.9 8.1 1.9 8.5s0.1 0.8 0 1c-0.1 0.1-0.7 1.1-0.7 1.5 0 0.4 0 1.4 0 1.9s-0.2 0.8 0 0.9c0.1 0.1 0.6 0 0.6 0.4 0 0.3 0 1.1-0.2 1.4 -0.2 0.4-0.7 1.3-0.8 1.7 0 0 0 0.1 0 0.1 -0.1 0.4-0.2 0.7-0.3 1.1h8.1c0-0.1 0-0.2 0.1-0.3 0-0.1 0-0.2 0-0.4 0.1-0.6 0.1-1.3 0-2C8.7 15.3 8.8 14.8 8.5 14.4zM5.8 9.3C5.7 9.6 5.5 10 5.5 10.3c-0.1 0.3 0 0.5 0.1 0.7 0.1 0.2-0.2 0.8-0.2 1 -0.1 0.2 0.1 0.6-0.1 0.6 -0.3 0-0.6 0-0.9 0.1 -0.3 0.1-0.6 0.2-1 0.1 -0.3 0-0.2-0.2-0.7 0 -0.5 0.2-1 0.4-1.2 0.5s-0.1-0.2-0.1-0.8c0.1-0.5 0.1-1.2 0-1.4 0-0.2 0-0.6 0.2-0.8 0 0 0.1-0.1 0.1-0.1 0 0.2 0.1 0.6 0.2 0.6 0.1 0 0.5 0 0.7-0.1 0.2-0.1 0.4-0.1 0.6-0.1 0.2 0 0.1 0.2 0.3 0.1 0.2-0.1 0.3-0.4 0.3-0.6C3.8 10.1 3.9 10 3.9 9.9 3.8 9.8 3.7 9.9 3.4 9.9c-0.2 0-0.6 0-0.9 0C2.3 9.9 2.2 10 2.1 10c-0.1 0-0.2 0-0.2 0S1.7 10 1.8 9.9c0.1-0.1 0.3-0.5 0.4-0.6 0.1-0.1 0.4-0.5 0.6-0.7 0.2-0.3 0.5-1 0.5-1s0.4-0.1 0.5 0.1C3.9 7.8 4 8 4 8s0.2 0.6 0.4 0.6C4.7 8.6 5.2 8.6 5.3 8.6c0.2 0 0.4 0.1 0.4 0.1S5.9 9.1 5.8 9.3zM5.6 5.9C5.4 5.9 4.7 5.9 4.4 6c-0.3 0-0.8 0.2-1 0.3 -0.2 0.1-1.2 0.4-1.2 0.4S3.6 5.3 3.9 5.2c0.3-0.1 0.9 0 1.4 0.1C5.7 5.3 6.3 5.3 6.2 5.4 6.2 5.6 5.8 5.9 5.6 5.9zM2.6 11.3c-0.2 0-0.5 0-0.7 0.1C1.7 11.6 1.8 11.7 1.8 11.7s0.1 0.1 0.2 0.2c0.1 0.1 0.2 0.1 0.2 0 0.1-0.1 0.2-0.1 0.2-0.1 0 0 0.2-0.2 0.4-0.2 0.2 0 0.3 0 0.5-0.1 0.2 0 0.3 0 0.4-0.1 0-0.1 0.1-0.1-0.1-0.1C3.4 11.3 2.8 11.3 2.6 11.3z" class="a"/>
-                  <path d="M17.7 13.8c-0.1-0.1-0.2-0.3-0.4-0.5 -0.3-0.9-0.8-0.8-1-0.9 0 0 0 0 0 0 -0.2-0.1-0.4-0.2-0.4-0.3 0-0.2-0.2-1.3 0-1.4 0.2-0.1 0.9-0.8 0.8-1.3 -0.1-0.4 0-1.8 0-2.5 0-0.7-0.1-0.9-0.1-0.9s0.6-0.2 0.6-0.9c0-0.8 0-2.4 0-2.4s-0.7-0.9-0.9-1.2c-0.2-0.3-0.3-0.5-0.8-0.8 -0.5-0.3-0.6-0.3-0.9-0.5C14.2 0 13.7 0 13.6 0c-0.1 0-1.2 0.3-1.6 0.4 -0.5 0.1-0.8 0.3-1 0.3C10.7 0.8 10.6 1.1 10.6 1.5c0 0.4-0.4 2.3-0.4 2.6 0 0.4-0.2 0.9 0 1.2 0.2 0.3 0.9 1.2 0.9 1.2S10.6 7 10.7 7.4c0.1 0.4 0.1 0.9 0 1 -0.1 0.1-0.7 1.1-0.7 1.6 0 0.5 0 1.5 0 2 0 0.6-0.2 0.8 0 0.9 0.1 0.1 0.6 0 0.6 0.4 0 0.3 0 1.1-0.2 1.6 -0.2 0.4-0.8 1.4-0.8 1.8 0 0.3-0.2 0.9-0.3 1.5h8.6c0.1-0.2 0.1-0.4 0.1-0.6 0-0.7 0-2 0-2.4C17.9 14.8 18 14.2 17.7 13.8zM15 8.3c-0.1 0.3-0.4 0.8-0.5 1.1 -0.1 0.3-0.1 0.5 0 0.7 0.1 0.2-0.2 0.8-0.2 1.1 -0.1 0.3 0.1 0.6-0.1 0.7 -0.3 0-0.6 0-1 0.1 -0.4 0.1-0.7 0.2-1 0.1 -0.3 0-0.2-0.2-0.8 0 -0.6 0.2-1.1 0.5-1.2 0.5 -0.2 0-0.1-0.2-0.1-0.8 0.1-0.6 0.1-1.3 0-1.5 0-0.2 0-0.6 0.2-0.9 0 0 0.1-0.1 0.1-0.1s0.1 0.6 0.2 0.7c0.1 0 0.5 0 0.8-0.1 0.3-0.1 0.5-0.1 0.6-0.1 0.2 0 0.1 0.2 0.3 0.1 0.2-0.1 0.3-0.4 0.3-0.6 0-0.2 0.1-0.3 0.1-0.4 0-0.1-0.2 0-0.5 0 -0.3 0-0.7 0-0.9 0 -0.2 0-0.4 0.1-0.5 0.1 -0.1 0-0.2 0-0.2 0s-0.2 0-0.1-0.1c0.1-0.1 0.3-0.6 0.4-0.6 0.1-0.1 0.4-0.5 0.6-0.8 0.2-0.3 0.6-1.1 0.6-1.1s0.5-0.1 0.6 0.1 0.2 0.4 0.2 0.4 0.3 0.6 0.5 0.6c0.2 0 0.8 0 0.9 0 0.2 0 0.5 0 0.5 0S15.2 8 15 8.3zM14.8 2.9c-0.1 0-0.3 0-0.5-0.2 -0.2-0.2-0.2-0.2-0.4-0.2 -0.2 0-0.3 0.3-0.5 0.4 -0.2 0.1-0.3 0.2-0.4 0.3 -0.2 0.1-0.2 0.1-0.4 0 -0.2-0.1-0.6 0-0.8 0 0 0-0.3 0.1-0.4 0.2 -0.1 0.1-1.1 0.8-1.1 0.8l0.2-0.8c0 0 0.2-1 0.2-1.2 0-0.2 0.1-0.8 0.2-0.9 0-0.1 0-0.2 0.2-0.3 0.2-0.2 0.6-0.3 0.6-0.3s0.5 0 0.7-0.1c0.2-0.1 0.5-0.1 0.7-0.2 0.2-0.1 0.5-0.1 0.7-0.1s0.5 0.1 0.7 0.2c0.2 0.1 0.7 0.5 0.7 0.5s-0.1 0.4-0.1 0.5c0 0.2 0 0.3 0.1 0.5C15.2 2.2 14.9 2.9 14.8 2.9zM11.4 10.4c-0.2 0-0.3 0-0.5 0.2 -0.2 0.1-0.3 0.3-0.3 0.3s0.1 0.4 0.2 0.4c0.1 0.1 0.3 0 0.4-0.1 0.1-0.1 0.1-0.2 0.2-0.3 0 0 0.2-0.2 0.4-0.2 0.2 0 0.3 0 0.6-0.1 0.2 0 0.4 0 0.4-0.1 0-0.1 0.1-0.1-0.1-0.1C12.3 10.5 11.6 10.4 11.4 10.4z" class="a"/>
-                </g>
-              </g>
-            </svg>
-              </div>
-            </div>
-      </div>
-</div>
-</section>
-<section class="form">
-
-<div class="form__contacto ">
+        <!-- </div> -->
+      <!-- </div> -->
+    </div>
+<div class="form__contacto text-center pt-5 pb-5 ">
   <h6>¿Quieres Aprender? Escribenos y disfruta</h6>
-  <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
+  <a href="Contacto.html" class="buttonContactoInstructora ">Contactanos</a>
 </div>
-
 </section>
 
   <footer class="footer">
@@ -108,42 +86,6 @@
     </div>
 
   </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
