dando toques finales

--- a/About.html
+++ b/About.html
@@ -44,16 +44,17 @@
     </div>
   </header>
 
-  <section class="history">
-    <div class="history__group container">
-      <h5>Nuestra historia.</h5>
+  <section class="history bg_page_historia">
+    <div class=" container history__content ">
+      <h5>Nuestra historia</h5>
+
       <div class="row">
-        <div class="col-md-6">
-          <p>Taharoa, es un grupo que se crea el año 1999, con la finalidad de dar a conocer la música y danza de la cultura Chilena “Rapanui”, de la Isla de Pascua, perteneciente a la a la V Región de Valparaíso, como una agrupación folclórica con el objetivo de desarrollar muestras de la cultura, trajes, baile, música, costumbres e historia, en la Región de Santiago, como muestra de la danza tradicional folclórica chilena, así dar a conocer y proteger la cultura Rapanui.  En la cual se realiza una recuperación y divulgación masiva a nivel Metropolitano y otras regiones de la identidad cultural de la Isla de Pascua.
+        <div class="col-md-6 history__parrafo ">
+          <p class="colorletra_parrafo">Taharoa, es un grupo que se crea el año 1999, con la finalidad de dar a conocer la música y danza de la cultura Chilena “Rapanui”, de la Isla de Pascua, perteneciente a la a la V Región de Valparaíso, como una agrupación folclórica con el objetivo de desarrollar muestras de la cultura, trajes, baile, música, costumbres e historia, en la Región de Santiago, como muestra de la danza tradicional folclórica chilena, así dar a conocer y proteger la cultura Rapanui.  En la cual se realiza una recuperación y divulgación masiva a nivel Metropolitano y otras regiones de la identidad cultural de la Isla de Pascua.
             Taharoa nace como un grupo de investigación cultural, alusivo a la cultura isleña, los integrantes viajan y recorren en primera instancia la Isla Juan Fernández y posteriormente la Isla de Pascua, para aprender sus bailes, cultura y tradiciones.  Posterior a la investigación para difundir esta cultura se crea el grupo de baile, cuyos ensayos se realizan en Liceo Ignacio Carrera Pinto de la comuna de Santiago. El nombre del grupo “Taharoa”, se puso en honor al Sr. Juan Bautista Laharoa, quien en esos años ayudo al grupo a la recopilación histórica, cuyo apellido era en realidad Taharoa, pero el registro civil lo inscribió como Laharoa. Gran personaje en nuestros inicios, quien apoyó y orientó al grupo con la cultura Rapanui. Ya que se considera muy importante rescatar la cultura de nuestro país,  para concientizar a las personas que ven las presentaciones, de que todos somos responsables de continuar con nuestras tradiciones del patrimonio cultural de Chile.</p>
           </div>
-          <div class="col-md-6">
-            <p>
+          <div class="col-md-6 history__parrafo ">
+            <p class="colorletra_parrafo ">
             Pronto el grupo comienza a funcionar y tener presentaciones, los mismo integrantes comienzan a confeccionar el vestuario, el que es hecho a mano, el grupo es integrado por damas y varones, que fomentan la cultura cuando no habían muchos grupos que traspasaban la identidad cultural del pueblo Rapanui, para posteriormente seguir creciendo en la parte musical, integrando músicos, para entregar a toda la comunidad una mejor muestra del lenguaje y tradiciones folclórica, a través de las coreografías y música en vivo.
             El grupo comienza a crecer y tener presentaciones no solo en la comuna de Santiago, sino también en otras comunas, invitaciones a Festivales de Muestras Folclóricas Nacionales, como en la Serena, Maipú, centros culturales de diferentes comunas, presentaciones a beneficios, entre otros, permitiéndonos crear lazos con otros grupos folclóricos, intercambiando diferentes trabajos a nivel socio-cultural, manteniendo una larga trayectoria de aprendizaje y traspaso cultural desde 1999 a la fecha (2019).
 
@@ -61,17 +62,12 @@
           </div>
 
         </div>
-      </div>
+        </div>
 
-  </section>
-
-  <section class="form">
-
-  <div class="form__contacto ">
+  <div class="contacto ">
     <h6>¿Quieres Aprender? Escribenos y disfruta</h6>
-    <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
+    <a href="Contacto.html" class="buttonContactoInstructora">Contactanos</a>
   </div>
-
   </section>
 
   <footer class="footer">
