--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-  <header class="header_hero">
-    <nav class="navbar navbar-expand-lg navbar-light w-100 fixed-top  ">
+<header class="header_hero">
+    <nav class="navbar navbar-expand-lg navbar-light  fixed-top  ">
       <a class="navbar-brand ml-5 tittle__logo scale-in-left  " href="index.html">TAHAROA</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -36,6 +36,7 @@
         </ul>
       </div>
     </nav>
+
     <div class="textPrincipal">
         <p>Escuela de baile  rapa nui - Contactanos y visitanos</p>
         <h1 class="textPrincipal__title">T A H A R O A</h1>
