--- a/Clases.html
+++ b/Clases.html
@@ -44,11 +44,13 @@
     </div>
   </header>
 
-<section class="courses ">
+<section class="courses bg_page_clases ">
 
-  <div class="container">
+  <div class="container courses__informationClass">
     <h4>Taharoa te Invita</h4>
-    <div class="col-md-12 text-center courses__info ">
+    <div class=" courses__info ">
+      </div>
+        <div class=" courses__parrafo">
         <p>
           <li>Si te gusta Bailar y divertirte</li>
           <li>Si tocas guitarra y quieres compartir</li>
@@ -61,36 +63,18 @@
           <li>Centro cultural Anita Gonzalez</li>
           <li>Direccion Av Laguna sur 8708</li>
           <li>Pudahuel</li>
+          </div>
       </div>
-      </div>
-      <div class="container">
-      <div class="row py-4 text-center">
-      <div class="col-md-3 py-2 courses__galery">
-        <img src="assets/images/clase2.jpg" alt="">
-      </div>
-      <div class="col-md-3 py-2 courses__galery">
-        <img src="assets/images/clase2.jpg" alt="">
-      </div>
-      <div class="col-md-3 py-2 courses__galery">
-          <img src="assets/images/clase3.jpg" alt="">
-      </div>
-      <div class="col-md-3 py-2 courses__galery">
-          <img src="assets/images/clase2.jpg" alt="">
-      </div>
-    </div>
-    </div>
-  <div class="container py-4">
+
+  <div class="container contenedorMaps">
     <h2>¿Donde estamos ubicadas?</h2>
-    <p class="text-center colorLetra py-2 ">Direccion Av Laguna sur 8708</p>
+    <p class="text-center direccioncursos py-2">Direccion Av Laguna sur 8708</p>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3328.6310868139894!2d-70.76169258531604!3d-33.45891668077154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c3abee933cd7%3A0xb3f31fe50ab7ae75!2sAv.%20Laguna%20Sur%208708%2C%20Pudahuel%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1578204507007!5m2!1ses!2scl" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </div>
-</section>
 
-<section class="form">
-
-<div class="form__contacto ">
+<div class="form__contacto pb-5 ">
   <h6>¿Quieres Aprender? Escribenos y disfruta</h6>
-  <a href="Contacto.html" class="button1 "> Contactanos</a>
+  <a href="Contacto.html" class="buttonContactoInstructora"> Contactanos</a>
 </div>
 
 </section>
